# aleo-tools

./: .gitignore  Cargo.toml  README.md  result.txt
examples/: example
src/: db.rs  faucet.rs  main.rs  multi.rs
src/cli/: inscribe.rs  mod.rs  multi.rs  nft.rs  relay.rs
