[package]
name = "auto-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
snarkvm = "^0.12.6"
aleo-rust = { git = "https://github.com/AleoHQ/aleo" }
rand = "0.8"
serde_json = "1"
clap = { version = "4", features = ["derive"] }


[dependencies.rocksdb]
version = "0.21"
default-features = false
features = ["lz4"]
