[package]
name = "auto-faucet"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
snarkvm = { version = "=0.16.15", features = ["circuit", "console", "rocks"] }
rand = "0.8"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ureq = {version = "2.6", features = ["json"]}
axum = "0.7"
rayon = "1.7"

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.rocksdb]
version = "0.21"
default-features = false
features = ["lz4"]

[dependencies.aleo-rust]
git = "https://github.com/izar-bridge/aleo-rust"
branch = "fix/remove-mut"
